<resources>
    <string name="app_name">VOLA</string>
    <string name="vola">VOLUNTEERS APP</string>
    <string name="abit">Anita Borg Institute of Technology</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_signin_with_facebook">Sign in with Facebook</string>
    <string name="btn_signin_with_google">Sign in with Google</string>
    <string name="loading">Loading</string>
    <string name="webClientToken">713910804615-7qk27ekaj13ujmhb5sdi7mvpmrgtqfe7.apps.googleusercontent.com</string>
    <string name="no_events">There are no Events yet!!</string>
    <string name="no_registrations">There are no registered Events!!</string>
    <string name="facebook_app_id">444164775953522</string>
    <string name="fb_login_protocol_scheme">fb1916034148612140</string>
    <string name="cancelled_request">Cancelled Request</string>
    <string name="error">Error in making Request!</string>
    <string name="skip_login">Click here to skip this step</string>
    <string name="signup_text">Dont have an account? Sign up here</string>
    <string name="signup">SIGNUP</string>
    <string name="sign_in_success">Signed In Successfully</string>
    <string name="sign_in_failure">Sign In Failure</string>
    <string name="logout">Logout</string>
    <string name="list_view">LIST VIEW</string>
    <string name="map_view">MAP VIEW</string>
    <string name="auth_failed">Sign In Failed.</string>
    <string name="auth_success">Logged in Successfully</string>
    <string name="no_bookmarks">No Bookmarked Events!</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="recents">Recents</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="about_vola">About VOLA!</string>
    <string name="view">View</string>
    <string name="other">Other</string>
    <string name="google_maps_key">AIzaSyCBJHrbZRCngtHJ15UTBKJZ3wDFwHsVzC0</string>
    <string name="nav_events">Events</string>
    <string name="nav_starred_events">Starred Events</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share App</string>
    <string name="verifying">Verifying Account…</string>
    <string name="invalid_password">Password should atleast be 6 characters long</string>
    <string name="invalid_username">Please enter a valid Email</string>
    <string name="empty_password">Please enter your password</string>
    <string name="skip">Click here to skip this step</string>
    <string name="password_mismatch">Passwords should match</string>
    <string name="link_login">Already have an account? Login In here</string>
    <string name="password_hint">Password</string>
    <string name="cnf_password_hint">Confirm Password</string>
    <string name="attendee_type">Attendee Type : </string>
    <string name="volunteer">Volunteer</string>
    <string name="student">Student</string>
    <string name="profile">Profile</string>
    <string name="others">Others</string>
    <string name="save">Save</string>

    <string name="email">Email : </string>
    <string name="fname">First Name : </string>
    <string name="lname">Last Name :</string>
    <string name="affiliations">Affiliations : </string>
    <string name="roleTitle">Title : </string>
    <string name="accommodations">Accommodations :</string>
    <!-- Toolbar titles when navigatactivty_mainmenu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Events</item>
        <item>Starred Events</item>
        <item>Schedule</item>
        <item>Navigate</item>
    </string-array>
    <string name="register">REGISTER FOR THIS EVENT</string>
    <string name="register_event">REGISTER</string>
    <string name="fname_hint">Enter First Name</string>
    <string name="lname_hint">Enter Last Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="requireVolunteers">Require Volunteers!</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="location">Location :</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="signin_successful">SignIn successful</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="signup_successful">Sign Up successful</string>
    <string name="signup_failed">Sign Up failed</string>
    <string name="enter_email">Enter an email address</string>
    <string name="enter_name">Enter your name</string>
    <string name="confirm_password">Please confirm the password</string>
    <string name="passwords_mismatch">Passwords did not match</string>
    <string name="signing_up">Signing up...</string>
    <string name="signing_in">Signing in...</string>
    <string name="fetching_your_profile">Fetching your profile</string>
    <string name="failed_fetch_profile">Failed to fetch profile</string>
    <string name="update">Update</string>
    <string name="failed_update_profile">Failed to update profile</string>
    <string name="logout_failed">Failed to Logout :%s</string>
    <string name="unknown_reason">Unknown reason</string>
    <string name="logout_successful">Logged out successfully</string>
    <string name="updating_your_profile">Updating your profile</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_affiliation">Enter affiliation</string>
    <string name="fetch_event_details">Fetching event details</string>
    <string name="event_bookmarked">Event bookmarked</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_successful">Registration successful</string>
    <string name="enter_affiliations">Enter affiliations</string>
    <string name="attendence_type">Please select attendance type</string>
    <string name="failed_to_fetch_events">Failed to get events</string>
    <string name="forgot_password_button_text">Forgot password</string>
    <string name="name">Name</string>
</resources>
