<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimenLayoutMargin"
        tools:context=".SignInActivity" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/heightImageLogo"
            android:id="@+id/logo"
            android:src="@mipmap/logo"/>

        <Button
            android:id="@+id/btn_sign_in_google"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimenMarginBottom"
            android:layout_marginLeft="@dimen/dimenMarginLeft"
            android:layout_marginRight="@dimen/dimenMarginRight"
            android:background="@color/google_signin"
            android:text="@string/btn_signin_with_google"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:drawableLeft="@drawable/google_plus"/>

        <Button
            android:id="@+id/btn_sign_in_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimenMarginBottom"
            android:layout_marginLeft="@dimen/dimenMarginLeft"
            android:layout_marginRight="@dimen/dimenMarginRight"
            android:background="@color/facebook_signin"
            android:text="@string/btn_signin_with_facebook"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/text_white"
            android:textStyle="bold"
            android:drawableLeft="@drawable/facebook"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            android:layout_marginBottom="@dimen/dimenMarginBottom"
            />

        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email" />


        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimenMarginTop"
            android:layout_marginBottom="@dimen/dimenMarginBottom"
            android:padding="@dimen/padding"
            android:textSize="@dimen/textSize"
            android:textColor="@color/text_white"
            android:background="@color/colorPrimary"
            android:text="SIGN IN"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:text="@string/signup"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSize"/>

        <TextView android:id="@+id/link_skip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimenMarginBottom"
            android:text="@string/skip_login"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize"/>

    </LinearLayout>

</ScrollView>